--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
-/* src/App.css */
 .App {
   text-align: center;
 }
 
 .App-header {
-  background-color: #949494;
+  background-color: #282c34;
   padding: 20px;
-  color: rgb(255, 255, 255);
+  color: white;
 }
