--- a/src/components/Tariff/Tariff.css
+++ b/src/components/Tariff/Tariff.css
@@ -14,6 +14,7 @@
   margin: 10px;
   overflow: hidden;
   font-family: Arial, sans-serif;
+  cursor: pointer;
 }
 
 .tariff-header {
@@ -51,4 +52,5 @@
 .highlighted {
   transform: scale(1.1);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  border-color: #000;
 }
